--- a/components/images/webapp/images/maincss.css
+++ b/components/images/webapp/images/maincss.css
@@ -1,19 +1,62 @@
 
-
-BODY {
-background-color: #D4D0C8;
-margin-top: 0px;
-margin-right: 0px;
-margin-bottom: 0px;
-margin-left: 0px;
-}
-
+/* ===== eCommerce specific styles ===== */
 BODY.ecbody {
 background-color: #FFFFFF;
 margin-top: 10px;
 margin-right: 10px;
 margin-bottom: 10px;
 margin-left: 10px;
+}
+
+DIV.ecom-mainarea {
+background-color: #FFFFFF;
+width: auto;
+}
+
+DIV.ecom-column-left {
+float: left;
+margin-right: 10px;
+width: 150px;
+}
+DIV.ecom-column-main {
+width: auto;
+text-align: left;
+valign: top;
+}
+DIV.ecom-column-right {
+float: right;
+margin-left: 10px;
+width: 200px;
+}
+
+DIV.ecom-endcolumns {
+  clear: both;
+}  
+
+DIV.ecom-screenlet {
+background-color: #FFFFFF;
+border: 1px solid #999999;
+margin-bottom: 10px;
+}
+DIV.ecom-screenlet-header {
+background-color: #000099;
+padding-top: 1px;
+padding-bottom: 1px;
+padding-right: 4px;
+padding-left: 4px;
+}
+DIV.ecom-screenlet-body {
+background-color: #FFFFFF;
+padding: 4px;
+}
+
+/* ===== General Styles ===== */
+BODY {
+background-color: #D4D0C8;
+margin-top: 0px;
+margin-right: 0px;
+margin-bottom: 0px;
+margin-left: 0px;
 }
 
 FORM {
