--- a/framework/images/webapp/images/tabstyles.css
+++ b/framework/images/webapp/images/tabstyles.css
@@ -145,6 +145,12 @@ width: 20px;
 text-align: right;
 }
 
+DIV.simple-right-half {
+float: right;
+width: 50%;
+text-align: right;
+}
+
 DIV.screenlet {
 background-color: #FFFFFF;
 border: 1px solid #999999;
@@ -152,6 +158,7 @@ margin-bottom: 10px;
 }
 DIV.screenlet-header {
 background-color: #000099;
+vertical-align: middle;
 padding-top: 1px;
 padding-bottom: 1px;
 padding-right: 4px;
