A whole bunch of HTML updates to use CSS layouts instead of table-based; all side-bar elements in ecommerce are now updated this way; also includes a number of other cleanups and improvements; also includes separation of ecommerce CSS properties to a separate file called ecommain.css; note that the ProductStore record referred to the old css file and needs to be updated to refer to this new file, or have the stylesheet field cleared out so that the default one will be used
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4748 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/framework/images/webapp/images/maincss.css
+++ b/framework/images/webapp/images/maincss.css
@@ -1,54 +1,6 @@
 
-/* ===== eCommerce specific styles ===== */
-BODY.ecbody {
-background-color: #FFFFFF;
-margin-top: 10px;
-margin-right: 10px;
-margin-bottom: 10px;
-margin-left: 10px;
-}
-
-DIV.ecom-mainarea {
-background-color: #FFFFFF;
-width: auto;
-}
-
-DIV.ecom-column-left {
-float: left;
-margin-right: 10px;
-width: 150px;
-}
-DIV.ecom-column-main {
-width: auto;
-text-align: left;
-valign: top;
-}
-DIV.ecom-column-right {
-float: right;
-margin-left: 10px;
-width: 200px;
-}
-
-DIV.ecom-endcolumns {
-  clear: both;
-}  
-
-DIV.ecom-screenlet {
-background-color: #FFFFFF;
-border: 1px solid #999999;
-margin-bottom: 10px;
-}
-DIV.ecom-screenlet-header {
-background-color: #000099;
-padding-top: 1px;
-padding-bottom: 1px;
-padding-right: 4px;
-padding-left: 4px;
-}
-DIV.ecom-screenlet-body {
-background-color: #FFFFFF;
-padding: 4px;
-}
+/* This CSS file is used for all OFBiz applications EXCEPT ecommerce. */
+/* See the "ecommain.css" file for ecommerce. */
 
 /* ===== General Styles ===== */
 BODY {
