--- a/framework/images/webapp/images/maincss.css
+++ b/framework/images/webapp/images/maincss.css
@@ -174,6 +174,7 @@ background-color: #dddddd;
 padding-right: 5px; padding-left: 5px;
 }
 
+/* ===== Tab/Button Bar Styles ===== */
 .tabContainer {
 background-color: #FFFFFF;
 padding-top: 4px;
