A bit more progress on CSS updates, and FINALLY after hours of experimenting found a good way to implement the table-style forms with lined-up names in the left column and the form elements in the right; for an example see the last couple of boxes on the new customer page, still need to finish the rest of that page and do the same thing in many other pages
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4779 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/framework/images/webapp/images/ecommain.css
+++ b/framework/images/webapp/images/ecommain.css
@@ -65,6 +65,7 @@ margin-right: 211px;
 
 DIV.ecom-endcolumns {
   clear: both;
+  font-size: 4pt;
 }  
 
 /* ====== eCommerce "Screenlet" Styles ====== */
@@ -111,6 +112,24 @@ font-weight: bold;
 text-decoration: none;
 color: red;
 }
+
+/* Form layout styles to simulate a table-style layout */
+div.form-row {
+clear: both;
+padding-top: 2px;
+}
+div.form-label {
+float: left;
+width: 180px;
+text-align: right;
+padding-top: 5px;
+}
+div.form-field {
+float: left;
+margin-left: 10px;
+text-align: left;
+} 
+
 
 /* ===== General Styles ===== */
 BODY {
