--- a/framework/images/webapp/images/ecommain.css
+++ b/framework/images/webapp/images/ecommain.css
@@ -20,16 +20,154 @@ margin-bottom: 0;
 }
 
 
-/* ===== Layout/Formatting Styles ===== */
-DIV.ecom-header {
+/* ===== Header Styles ===== */
+#ecom-header {
+position: relative;
 background: #ffffff;
-height: 100px;
+height: 75px;
 voice-family: "\"}\"";
 voice-family: inherit;
-height: 99px;
+height: 75px;
 /* border:1px solid #000; */
 }
+#ecom-header #left {
+position: absolute;
+top: 0px;
+left: 0px;
+width: 280px;
+}
+#ecom-header #middle {
+margin-left: 290px;
+margin-right: 210px;
+padding-top: 10px;
+width: auto;
 
+text-align: center;
+}
+#ecom-header #right {
+position: absolute;
+top: 0px;
+right: 0px;
+width: 200px;
+padding: 0px;
+margin-top: 20px;
+
+text-align: right;
+}
+
+#welcome-message {
+padding-right: 10px;
+padding-left: 10px;
+font-family: Verdana, Arial, Helvetica, sans-serif;
+font-size: 10px;
+font-weight: bold;
+text-decoration: none;
+color: #000000;
+}
+#welcome-message a {
+font-family: Verdana, Arial, Helvetica, sans-serif;
+font-size: 10px;
+font-weight: bold;
+text-decoration: none;
+color: #000099;
+}
+#welcome-message a:hover {
+color: black;
+text-decoration: underline;
+}
+#company-name {
+margin: 0px;
+font-size: 12pt;
+font-family: Verdana, Arial, Helvetica, sans-serif;
+font-weight: bold;
+color: #000099;
+white-space: nowrap;
+}
+#company-subtitle {
+margin: 0px;
+font-size: 6pt;
+font-family: Verdana, Arial, Helvetica, sans-serif;
+color: #330099;
+white-space: nowrap;
+}
+
+#microcart {
+font-size: 10px;
+font-family: Verdana, Arial, Helvetica, sans-serif;
+font-weight: bold;
+text-decoration: none;
+color: black;
+}
+#microcart a {
+text-decoration: none;
+color: #000099;
+}
+#microcart a:hover {
+color: black;
+text-decoration: underline;
+}
+#microcart .disabled {
+color: #666666;
+}
+
+/* ===== Header-Bar Styles ===== */
+#ecom-header-bar {
+position: relative;
+background: #B4B0AA;
+text-align: center;
+height: 14px;
+voice-family: "\"}\"";
+voice-family: inherit;
+height: 14px;
+}
+
+#ecom-header-bar ul {
+width: auto;
+position: absolute;
+display: block;
+list-style: none;
+background: transparent;
+vertical-align: middle;
+margin: 0px;
+padding: 0px;
+}
+#ecom-header-bar ul#left-links {
+top: 0;
+left: 0;
+}
+#ecom-header-bar ul#right-links {
+top: 0;
+right: 0;
+}
+
+#ecom-header-bar ul li { 
+height: 14px;
+padding: 0px 8px 0px 8px;
+}
+#ecom-header-bar ul#left-links li {
+float: left;
+border-right: 1px solid #FFFFFF;
+}
+#ecom-header-bar ul#right-links li {
+float: right;
+border-left: 1px solid #FFFFFF;
+}
+
+#ecom-header-bar ul li a {
+font-family: Verdana, Arial, Helvetica, sans-serif;
+font-size: 10px;
+font-weight: bold;
+text-decoration: none;
+color: #000099;
+} 
+#ecom-header-bar ul li:hover a {
+color: black;
+text-decoration: underline;
+}
+
+
+
+/* ===== Layout/Formatting Styles ===== */
 /* ecom-mainarea wraps what is below the header including the divs for left, main, right columns as applicable */
 DIV.ecom-mainarea {
 background-color: #FFFFFF;
@@ -61,6 +199,7 @@ DIV.ecom-column-main, DIV.ecom-column-main-leftonly, DIV.ecom-column-main-righto
 background:#fff;
 text-align: left;
 vertical-align: top;
+margin-top: 10px;
 }
 DIV.ecom-column-main {
 margin-left: 160px;
@@ -224,28 +363,6 @@ width: auto;
 padding: 4;
 }
 
-.headerboxoutside {
-background-color: #FFFFFF;
-padding: 0;
-}
-
-.headerboxtop {
-background-color: #FFFFFF;
-padding: 4;
-border-color: #FFFFFF;
-border-style: solid;
-border-width: 1px 1px 0px 1px;
-}
-
-.headerboxbottom {
-background-color: #FFFFFF;
-padding: 0;
-border-color: #FFFFFF;
-border-style: solid;
-border-width: 0px 1px 1px 1px;
-}
-
-
 
 .boxoutside {
 background-color: #FFFFFF;
@@ -345,20 +462,6 @@ color: #000099;
 
 A.buttontext:hover {
 color: #000099;
-text-decoration: underline;
-}
-
-A.headerbuttontext {
-font-family: Verdana, Arial, Helvetica, sans-serif;
-font-size: 10px;
-font-weight: bold;
-text-decoration: none;
-color: #000099;
-}
-
-
-A.headerbuttontext:hover {
-color: black;
 text-decoration: underline;
 }
 
@@ -515,150 +618,8 @@ border-width: 1px;
 border-color: #999999;
 }
 
-.headerButtonLeft {
-font-family: Verdana, Arial, Helvetica, sans-serif;
-font-size: 10px;
-font-weight: bold;
-text-decoration: none;
-color: #000099;
-background-color: #B4B0AA;
-border-right: solid white 1px;
-padding-right: 10px;
-padding-left: 10px;
-}
+/* ===== Other Header Styles ===== */
 
-.headerButtonLeft:hover {
-background-color: #D4D0C8;
-color: black;
-text-decoration: underline;
-}
-
-.headerButtonLeftSelected {
-font-family: Verdana, Arial, Helvetica, sans-serif;
-font-size: 10px;
-font-weight: bold;
-text-decoration: none;
-color: #000099;
-background-color: #D4D0C8;
-border-right: solid white 1px;
-padding-right: 10px;
-padding-left: 10px;
-}
-
-.headerButtonRight {
-font-family: Verdana, Arial, Helvetica, sans-serif;
-font-size: 10px;
-font-weight: bold;
-text-decoration: none;
-color: #000099;
-background-color: #B4B0AA;
-border-left: solid white 1px;
-padding-right: 10px;
-padding-left: 10px;
-text-align: right;
-}
-
-.headerButtonRight:hover {
-background-color: #D4D0C8;
-color: black;
-text-decoration: underline;
-}
-
-.headerButtonRightSelected {
-font-family: Verdana, Arial, Helvetica, sans-serif;
-font-size: 10px;
-font-weight: bold;
-text-decoration: none;
-color: #000099;
-background-color: #D4D0C8;
-border-left: solid white 1px;
-padding-right: 10px;
-padding-left: 10px;
-}
-
-.headerCenter {
-background-color: #B4B0AA;
-padding-right: 10px;
-padding-left: 10px;
-font-family: Verdana, Arial, Helvetica, sans-serif;
-font-size: 10px;
-font-weight: bold;
-text-decoration: none;
-color: #000000;
-}
-
-A.headerCenter {
-font-family: Verdana, Arial, Helvetica, sans-serif;
-font-size: 10px;
-font-weight: bold;
-text-decoration: none;
-color: #000099;
-background-color: #D4D0C8;
-padding-right: 10px;
-padding-left: 10px;
-}
-
-A.headerCenter:hover {
-background-color: #D4D0C8;
-color: black;
-text-decoration: underline;
-}
-
-.headerCenterSelected {
-background-color: #D4D0C8;
-padding-right: 10px;
-padding-left: 10px;
-font-family: Verdana, Arial, Helvetica, sans-serif;
-font-size: 8pt;
-font-weight: bold;
-text-decoration: none;
-color: #000000;
-}
-
-.headerCompanyName {
-margin: 0px;
-font-size: 12pt;
-font-family: Verdana, Arial, Helvetica, sans-serif;
-font-weight: bold;
-color: #000099;
-white-space: nowrap;
-}
-
-.headerCompanySubtitle {
-margin: 0px;
-font-size: xx-small;
-font-family: Verdana, Arial, Helvetica, sans-serif;
-color: #330099;
-white-space: nowrap;
-}
-
-.insideHeaderText {
-font-size: 10px;
-font-family: Verdana, Arial, Helvetica, sans-serif;
-font-weight: bold;
-color: black;
-}
-
-A.insideHeaderLink {
-font-family: Verdana, Arial, Helvetica, sans-serif;
-font-size: 10px;
-font-weight: bold;
-text-decoration: none;
-color: #000099;
-}
-
-A.insideHeaderLink:hover {
-color: black;
-text-decoration: underline;
-}
-
-.insideHeaderDisabled {
-font-family: Verdana, Arial, Helvetica, sans-serif;
-font-size: 10px;
-font-weight: bold;
-text-decoration: none;
-color: #666666;
-}
 
 .headersmalltext {
 font-size: 8pt; 
@@ -677,6 +638,7 @@ a.headersmalllink:hover {
 color: red;
 }
 
+/* ===== Misc/General Styles ===== */
 HR.sepbar {
 font-size: xx-small;
 width: 100%;
@@ -756,36 +718,6 @@ border-top-width: thin;
 border-right-width: thin;
 border-bottom-width: thin;
 border-left-width: thin
-}
-
-.viewOneTR1 {
-background-color: #B4B0AA;
-font-size: 10px;
-font-family: Verdana, Arial, Helvetica, sans-serif;
-}
-
-.viewOneTR2 {
-background-color: #D4D0C8;
-font-size: 10px;
-font-family: Verdana, Arial, Helvetica, sans-serif;
-}
-
-.viewManyHeaderTR {
-background-color: #99CCFF;
-font-size: 10px;
-font-family: Verdana, Arial, Helvetica, sans-serif;
-}
-
-.viewManyTR1 {
-background-color: #D4D0C8;
-font-size: 10px;
-font-family: Verdana, Arial, Helvetica, sans-serif;
-}
-
-.viewManyTR2 {
-background-color: #FFFFFF;
-font-size: 10px;
-font-family: Verdana, Arial, Helvetica, sans-serif;
 }
 
 .editInputBox {
