--- a/website/images/ofbws.css
+++ b/website/images/ofbws.css
@@ -99,7 +99,7 @@ width: 100%;
 
 .headerboxtop {
 background-color: #FFFFFF;
-padding: 4;
+padding: 4px;
 }
 
 .headerboxtop .left {
@@ -212,7 +212,7 @@ font-family: Verdana, Arial, Helvetica, sans-serif;
 font-size: 10px;
 font-weight: bold;
 color: #000099;
-border: transparent solid 1px;
+border: 1px solid #dde;
 text-decoration: none;
 }
 #link-column a:hover {
@@ -269,7 +269,8 @@ font-weight: normal;
 }
 
 #detail-column ul {
-margin: 2px 0px 2px 0px;
+margin: 2px 0;
+padding-left: 20px;
 }
 #detail-column ul li {
 font-size: 9pt;
@@ -323,7 +324,7 @@ DIV.col-fill {
 font-family: Verdana, Arial, Helvetica, sans-serif;
 font-size: 10px; font-weight: bold; text-decoration: none;
 background-color: #B4B0AA; color: #000099;
-margin: 0; padding: 0; border: none; float: center; width: 0;
+margin: 0; padding: 0; border: none; width: 0;
 }
 
 DIV.col-right {
@@ -346,7 +347,7 @@ margin: 0px;
 }
 
 UL {
-#list-style-type: square; 
+/*list-style-type: square;*/
 margin-top: 0; 
 margin-bottom: 0;
 }
@@ -433,7 +434,7 @@ font-family: Verdana, Arial, Helvetica, sans-serif;
 font-size: 10px;
 font-weight: bold;
 text-decoration: none;
-color: gold;
+color: #c90;
 }
 
 A.lightbuttontext:hover {
