--- a/framework/images/webapp/images/ecommain.css
+++ b/framework/images/webapp/images/ecommain.css
@@ -174,6 +174,15 @@ text-decoration: underline;
 
 
 /* ===== Layout/Formatting Styles ===== */
+/* NOTE: using a combination of a float left/right for the side bars AND 
+  wide margins for the center to get 2 desired effects: 1. be able to end
+  columns and put the footer at the bottom of the page and 2. not have the
+  center column expand to full width below the columns.
+  
+  The downside to this is that in some browsers we can't effectively use floats
+  within divs in the main column.
+*/
+
 /* ecom-mainarea wraps what is below the header including the divs for left, main, right columns as applicable */
 #ecom-mainarea {
 position: relative;
@@ -182,15 +191,15 @@ width: auto;
 }
 
 #ecom-mainarea .left {
-position: absolute; left: 0px; top: 0px;
-/* the old way: float: left; margin-right: 10px; */
+/* alt: position: absolute; left: 0px; top: 0px; */
+float: left;
 width: 150px;
 background: #ffffff;
 /* border:1px solid #000; */
 }
 #ecom-mainarea .right {
-position: absolute; right: 0px; top: 0px;
-/* the old way: float: right; margin-left: 10px; */
+/* alt: position: absolute; right: 0px; top: 0px; */
+float: right;
 width: 200px;
 background: #ffffff;
 }
@@ -359,9 +368,9 @@ font-weight: bold;
 background-color: #CCCCCC;
 border: 1px solid #000000;
 text-align: center;
-margin: 2 auto;
+margin: 2px auto;
 width: auto;
-padding: 4;
+padding: 4px;
 }
 
 
@@ -485,12 +494,12 @@ padding-right: 5px;
 border-right: 1px solid #5886C6
 }
 
-.submenutext, A.submenutext, A.submenutext:visited, A.submenutext:checked {
+.submenutext, A.submenutext, A.submenutext:visited {
 font-family: Verdana, Arial, Helvetica, sans-serif;
 font-size: 10px;
 font-weight: bold;
 text-decoration: none;
-color: gold;
+color: yellow;
 padding-left: 6px;
 padding-right: 5px;
 border-right: 1px solid #5886C6
@@ -534,7 +543,7 @@ font-family: Verdana, Arial, Helvetica, sans-serif;
 font-size: 10px;
 font-weight: bold;
 text-decoration: none;
-color: gold;
+color: yellow;
 padding-left: 6px;
 }
 
@@ -562,7 +571,7 @@ font-family: Verdana, Arial, Helvetica, sans-serif;
 font-size: 10px;
 font-weight: bold;
 text-decoration: none;
-color: gold;
+color: yellow;
 border: none;
 }
 
@@ -576,7 +585,7 @@ font-family: Verdana, Arial, Helvetica, sans-serif;
 font-size: 8px;
 font-weight: bold;
 text-decoration: none;
-color: gold;
+color: yellow;
 border: none;
 }
 
@@ -610,7 +619,7 @@ font-family: Verdana, Arial, Helvetica, sans-serif;
 font-size: 10pt;
 font-weight: bold;
 text-decoration: none;
-color: CCCCCC;
+color: #CCCCCC;
 }
 
 A IMG.imageborder {
@@ -625,13 +634,13 @@ border-color: #999999;
 .headersmalltext {
 font-size: 8pt; 
 font-family: Verdana, Arial, Helvetica, sans-serif; 
-font: bold; 
+font-weight: bold; 
 color: black;
 }
 a.headersmalllink {
 font-size: 8pt; 
 font-family: Verdana, Arial, Helvetica, sans-serif;
-font: bold; 
+font-weight: bold; 
 color: #000099; 
 text-decoration: none;
 }
@@ -805,36 +814,44 @@ color: red;
 }
 
 /* ===== Product Summary Styles ===== */
-#product-prevnext {
+.product-prevnext {
 text-align: right;
 }
 
-#productsummary-container {
+.productsummary-container {
 margin-top: 5px;
 margin-bottom: 5px;
 border-top: #999 solid 1px;
 }
 
-#productsummary {
+.productsummary {
+position: relative;
 padding: 5px;
 border-bottom: #999 solid 1px;
+/* using min-height as an alternative to clear: both; because that, in some browsers, will clear the top-level columns and not just in this div (Mozilla based, namely) */
+min-height: 60px;
+overflow: visible;
 }
 
-#productsummary #smallimage {
+.productsummary .smallimage {
 float: left;
-width: 55px;
-height: 55px;
+/* position: absolute; top: 5px; left: 5px; */
+margin: 0px 5px 5px 0px;
+}
+.productsummary .smallimage img {
+border: #CCC solid 1px;
+width: 50px;
 }
 
-#productsummary #productbuy {
+.productsummary .productbuy {
 float: right;
 width: 130px;
 margin: 5px;
 text-align: right;
 }
 
-#productsummary #productinfo {
-margin-left: 60px;
+.productsummary .productinfo {
+/* margin-left: 60px; */
 text-align: left;
 }
 
