--- a/specialized/opentravelsystem/webapp/hotelfrontend/images/frontend.css
+++ b/specialized/opentravelsystem/webapp/hotelfrontend/images/frontend.css
@@ -311,7 +311,7 @@ div.ecom-column-right{
 	margin-left:10px;
 	width:200px;
 	}
-div.ecom-endcolumns{
+div.endcolumns{
 	clear:both;
 	}
 div.ecom-screenlet{
