--- a/specialized/opentravelsystem/webapp/hotelbackend/images/maincss.css
+++ b/specialized/opentravelsystem/webapp/hotelbackend/images/maincss.css
@@ -1,7 +1,7 @@
 
 /* ===== eCommerce specific styles ===== */
 BODY.ecbody {
-background-color: #FFFFFF;
+background: #FFFFFF;
 margin-top: 10px;
 margin-right: 10px;
 margin-bottom: 10px;
@@ -9,7 +9,7 @@ margin-left: 10px;
 }
 
 DIV.ecom-mainarea {
-background-color: #FFFFFF;
+background: #FFFFFF;
 width: auto;
 }
 
@@ -36,25 +36,25 @@ DIV.endcolumns {
 }  
 
 DIV.ecom-screenlet {
-background-color: #FFFFFF;
+background: #FFFFFF;
 border: 1px solid #999999;
 margin-bottom: 10px;
 }
 DIV.ecom-screenlet-header {
-background-color: #000099;
+background: #000099;
 padding-top: 1px;
 padding-bottom: 1px;
 padding-right: 4px;
 padding-left: 4px;
 }
 DIV.ecom-screenlet-body {
-background-color: #FFFFFF;
+background: #FFFFFF;
 padding: 4px;
 }
 
 /* ===== General Styles ===== */
 BODY {
-background-color: #D4D0C8;
+background: #D4D0C8;
 margin-top: 0px;
 margin-right: 0px;
 margin-bottom: 0px;
@@ -106,7 +106,7 @@ DIV.graybox {
 font-family: Verdana, Arial, Helvetica, sans-serif;
 font-size: 10px;
 font-weight: bold;
-background-color: #CCCCCC;
+background: #CCCCCC;
 border: 1px solid #000000;
 text-align: center;
 margin: 2 auto;
@@ -144,12 +144,12 @@ font-family: Verdana, Arial, Helvetica, sans-serif;
 }
 
 .headerboxoutside {
-background-color: #FFFFFF;
+background: #FFFFFF;
 padding: 0;
 }
 
 .headerboxtop {
-background-color: #FFFFFF;
+background: #FFFFFF;
 padding: 4;
 border-color: #FFFFFF;
 border-style: solid;
@@ -157,7 +157,7 @@ border-width: 1px 1px 0px 1px;
 }
 
 .headerboxbottom {
-background-color: #FFFFFF;
+background: #FFFFFF;
 padding: 0;
 border-color: #FFFFFF;
 border-style: solid;
@@ -192,7 +192,7 @@ color: red;
 }
 
 .boxoutside {
-background-color: #FFFFFF;
+background: #FFFFFF;
 padding: 0px;
 border-color: #999999;
 border-style: solid;
@@ -200,7 +200,7 @@ border-width: 1px 1px 1px 1px;
 }
 
 .boxtop {
-background-color: #000099;
+background: #000099;
 padding-top: 1px;
 padding-bottom: 1px;
 padding-right: 4px;
@@ -211,7 +211,7 @@ border-width: 0px 0px 0px 0px;
 }
 
 .boxbottom {
-background-color: #FFFFFF;
+background: #FFFFFF;
 padding: 4px;
 border-color: #999999;
 border-style: solid;
@@ -220,12 +220,12 @@ border-width: 0px 0px 0px 0px;
 
 .button {
 border-style: outset; border-color: #9999CC; border-width: 2px;
-background-color: #dddddd;
+background: #dddddd;
 padding-right: 5px; padding-left: 5px;
 }
 
 .tabContainer {
-background-color: #FFFFFF;
+background: #FFFFFF;
 padding-top: 4px;
 margin-bottom: 10px;
 }
@@ -236,7 +236,7 @@ font-size: 10px;
 font-weight: bold;
 text-decoration: none;
 color: #000099;
-background-color: #D4D0C8;
+background: #D4D0C8;
 padding-right: 5px;
 padding-left: 5px;
 padding-top: 1px;
@@ -246,7 +246,7 @@ border: solid #000099 1px;
 
 A.tabButton:hover {
 color: #FFFFFF;
-background-color: #000099;
+background: #000099;
 border: solid #000099 1px;
 }
 
@@ -256,7 +256,7 @@ font-size: 10px;
 font-weight: bold;
 text-decoration: none;
 color: #FFFFFF;
-background-color: #000099;
+background: #000099;
 padding-right: 5px;
 padding-left: 5px;
 padding-top: 1px;
@@ -509,14 +509,14 @@ font-size: 10px;
 font-weight: bold;
 text-decoration: none;
 color: #000099;
-background-color: #B4B0AA;
+background: #B4B0AA;
 border-right: solid white 1px;
 padding-right: 10px;
 padding-left: 10px;
 }
 
 .headerButtonLeft:hover {
-background-color: #D4D0C8;
+background: #D4D0C8;
 color: black;
 text-decoration: underline;
 }
@@ -527,7 +527,7 @@ font-size: 10px;
 font-weight: bold;
 text-decoration: none;
 color: #000099;
-background-color: #D4D0C8;
+background: #D4D0C8;
 border-right: solid white 1px;
 padding-right: 10px;
 padding-left: 10px;
@@ -539,7 +539,7 @@ font-size: 10px;
 font-weight: bold;
 text-decoration: none;
 color: #000099;
-background-color: #B4B0AA;
+background: #B4B0AA;
 border-left: solid white 1px;
 padding-right: 10px;
 padding-left: 10px;
@@ -547,7 +547,7 @@ text-align: right;
 }
 
 .headerButtonRight:hover {
-background-color: #D4D0C8;
+background: #D4D0C8;
 color: black;
 text-decoration: underline;
 }
@@ -558,14 +558,14 @@ font-size: 10px;
 font-weight: bold;
 text-decoration: none;
 color: #000099;
-background-color: #D4D0C8;
+background: #D4D0C8;
 border-left: solid white 1px;
 padding-right: 10px;
 padding-left: 10px;
 }
 
 .headerCenter {
-background-color: #B4B0AA;
+background: #B4B0AA;
 padding-right: 10px;
 padding-left: 10px;
 font-family: Verdana, Arial, Helvetica, sans-serif;
@@ -581,19 +581,19 @@ font-size: 10px;
 font-weight: bold;
 text-decoration: none;
 color: #000099;
-background-color: #D4D0C8;
+background: #D4D0C8;
 padding-right: 10px;
 padding-left: 10px;
 }
 
 A.headerCenter:hover {
-background-color: #D4D0C8;
+background: #D4D0C8;
 color: black;
 text-decoration: underline;
 }
 
 .headerCenterSelected {
-background-color: #D4D0C8;
+background: #D4D0C8;
 padding-right: 10px;
 padding-left: 10px;
 font-family: Verdana, Arial, Helvetica, sans-serif;
@@ -669,7 +669,7 @@ HR.sepbar {
 font-size: xx-small;
 width: 100%;
 height: 1px;
-background-color: #999999;
+background: #999999;
 border-width: 0px;
 }
 
@@ -691,7 +691,7 @@ color: #000099;
 
 .ontab {
 font-size: 8pt;
-background-color: black;
+background: black;
 padding: 2px;
 border-style: inset;
 border-width: 3px;
@@ -708,7 +708,7 @@ padding: 2px;
 
 .offtab {
 font-size: 10px;
-background-color: #CCCCCC;
+background: #CCCCCC;
 padding: 2px;
 border-style: outset;
 border-width: 3px;
@@ -733,7 +733,7 @@ font-family: Verdana, Arial, Helvetica, sans-serif;
 font-weight: bold;
 color: #FFFFFF;
 width: 100%;
-background-color: black;
+background: black;
 padding: 2px;
 }
 
@@ -747,68 +747,68 @@ border-left-width: thin
 }
 
 .viewOneTR1 {
-background-color: #B4B0AA;
+background: #B4B0AA;
 font-size: 10px;
 font-family: Verdana, Arial, Helvetica, sans-serif;
 }
 
 .viewOneTR2 {
-background-color: #D4D0C8;
+background: #D4D0C8;
 font-size: 10px;
 font-family: Verdana, Arial, Helvetica, sans-serif;
 }
 
 .viewManyHeaderTR {
-background-color: #99CCFF;
+background: #99CCFF;
 font-size: 10px;
 font-family: Verdana, Arial, Helvetica, sans-serif;
 }
 
 .viewManyTR1 {
-background-color: #D4D0C8;
+background: #D4D0C8;
 font-size: 10px;
 font-family: Verdana, Arial, Helvetica, sans-serif;
 }
 
 .viewManyTR2 {
-background-color: #FFFFFF;
+background: #FFFFFF;
 font-size: 10px;
 font-family: Verdana, Arial, Helvetica, sans-serif;
 }
 
 .editInputBox {
-background-color: #FFFFFF;
+background: #FFFFFF;
 font-size: 8pt;
 font-family: Verdana, Arial, Helvetica, sans-serif;
 }
 
 .inputBox {
 font-family: Verdana, Arial, Helvetica, sans-serif;
-background-color: #FFFFFF;
+background: #FFFFFF;
 font-size: 8pt;
 }
 
 .selectBox {
 font-family: Verdana, Arial, Helvetica, sans-serif;
-background-color: #FFFFFF;
+background: #FFFFFF;
 font-size: 8pt;
 }
 
 .textAreaBox {
 font-family: Verdana, Arial, Helvetica, sans-serif;
-background-color: #FFFFFF;
+background: #FFFFFF;
 font-size: 8pt;
 }
 
 .radioButton {
 font-family: Verdana, Arial, Helvetica, sans-serif;
-background-color: #FFFFFF;
+background: #FFFFFF;
 font-size: 8pt;
 }
 
 .checkBox {
 font-family: Verdana, Arial, Helvetica, sans-serif;
-background-color: #FFFFFF;
+background: #FFFFFF;
 font-size: 8pt;
 }
 
@@ -818,7 +818,7 @@ font-size: 8pt;
 font-weight: bold;
 text-decoration: none;
 color: #000099;
-background-color: white;
+background: white;
 border: #999999 solid 1px;
 }
 
@@ -828,7 +828,7 @@ font-size: 10pt;
 font-weight: bold;
 text-decoration: none;
 color: #000099;
-background-color: white;
+background: white;
 border: #999999 solid 1px;
 }
 
