--- a/website/images/ofbws.css
+++ b/website/images/ofbws.css
@@ -1,6 +1,6 @@
 
 BODY {
-background-color: #D4D0C8;
+background: #D4D0C8;
 margin-top: 0px;
 margin-right: 0px;
 margin-bottom: 0px;
@@ -19,26 +19,26 @@ margin-top: 10px;
 }
 
 .contentarea, .whitearea {
-background-color: #FFFFFF;
+background: #FFFFFF;
 }
 
 .blackarea {
-background-color: #000000;
+background: #000000;
 }
 
 .mainblock {
-background-color: #D4D0C8;
+background: #D4D0C8;
 vertical-align: top;
 }
 
 .tabdownblock {
-background-color: #B4B0AA;
+background: #B4B0AA;
 }
 
 .tabdowncenter {
 font-family: Arial, Helvetica, sans-serif;
 background-image: url(tabs/tab_down_fill.gif);
-background-color: #B4B0AA;
+background: #B4B0AA;
 font-size: 15pt;
 text-align: center;
 vertical-align: middle;
@@ -47,19 +47,19 @@ color: #000000;
 
 .tabdownleft {
 background-image: url(tabs/tab_down_left.gif);
-background-color: #B4B0AA;
+background: #B4B0AA;
 	
 }
 
 .tabdownright {
 background-image: url(tabs/tab_down_right.gif);
-background-color: #B4B0AA;
+background: #B4B0AA;
 }
 
 .tabupcenter {
 font-family: Arial, Helvetica, sans-serif;
 background-image: url(tabs/tab_up_fill.gif);
-background-color: #D4D0C8;	
+background: #D4D0C8;	
 font-size: 15pt;
 text-align: center;
 vertical-align: middle;
@@ -68,14 +68,14 @@ color: #000000;
 
 .tabupleft {
 background-image: url(tabs/tab_up_left.gif);
-background-color: #D4D0C8;    
+background: #D4D0C8;    
 border-width: 0px;
 padding: 0px;
 }
 
 .tabupright {
 background-image: url(tabs/tab_up_right.gif);
-background-color: #D4D0C8;
+background: #D4D0C8;
 }
 
 A.tablink,A.tablink:hover,A.tablinkselected,A.tablinkselected:hover {	
@@ -92,13 +92,13 @@ color: #000099;
 }
 
 .headerboxoutside {
-background-color: #FFFFFF;
+background: #FFFFFF;
 padding: 0;
 width: 100%;
 }
 
 .headerboxtop {
-background-color: #FFFFFF;
+background: #FFFFFF;
 padding: 4px;
 }
 
@@ -116,12 +116,12 @@ padding-right: 10px;
 }
 
 .headerboxbottom {
-background-color: #FFFFFF;
+background: #FFFFFF;
 padding: 0;
 }
 
 .boxoutside {
-background-color: #FFFFFF;
+background: #FFFFFF;
 padding: 0px;
 border-color: #999999;
 border-style: dotted;
@@ -129,7 +129,7 @@ border-width: 1px 1px 1px 1px;
 }
 
 .boxtop {
-background-color: #CCCCDD;
+background: #CCCCDD;
 padding-top: 1px;
 padding-bottom: 1px;
 padding-right: 4px;
@@ -137,7 +137,7 @@ padding-left: 4px;
 }
 
 .boxbottom {
-background-color: #DDDDEE;
+background: #DDDDEE;
 padding: 4px;
 }
 
@@ -172,13 +172,13 @@ color: red;
 #link-column {
 float: left;
 width: 210px;
-background-color: #DDDDEE;
+background: #DDDDEE;
 border: #999999 dotted 1px;
 }
 #link-column h2 {
 margin: 0px 0px 0px 0px;
 padding: 1px 4px 1px 4px; 
-background-color: #CCCCDD;
+background: #CCCCDD;
 font-family: Verdana, Arial, Helvetica, sans-serif;
 font-size: 12px;
 font-weight: bold;
@@ -201,7 +201,7 @@ border: #000000 none 0px;
 #link-column h3 a:hover {
 color: #000099;
 text-decoration: underline;
-background-color: transparent;
+background: transparent;
 border: #000000 none 0px;
 }
 #link-column a {
@@ -262,7 +262,7 @@ font-weight: bold;
 #detail-column p a:hover {
 color: #0000CC;
 text-decoration: underline;
-background-color: transparent;
+background: transparent;
 }
 #detail-column p a.sub-link {
 font-weight: normal;
@@ -284,26 +284,26 @@ padding: 5px;
 border: #999999 dotted 1px;
 }
 #intro {
-background-color: #E6EEE7;
+background: #E6EEE7;
 }
 #users {
-background-color: #EEDDEE;
+background: #EEDDEE;
 }
 #announcements {
-background-color: #EEEEDD;
+background: #EEEEDD;
 }
 #testimonials {
-background-color: #EEDDEE;
+background: #EEDDEE;
 }
 #projects-standards {
-background-color: #E6EEE7;
+background: #E6EEE7;
 }
 
 
 /* ===== Other Styles ===== */
 .apptitle {
 font-family: Verdana, Arial, Helvetica, sans-serif;
-background-color: #000099;	
+background: #000099;	
 line-height: 2;
 font-size: 8pt;
 font-weight: bold;
@@ -311,7 +311,7 @@ color: #FFFFFF;
 }
 
 DIV.row {  
-background-color: #B4B0AA;
+background: #B4B0AA;
 margin-top: 0; margin-right: auto; margin-bottom: 0; margin-left: auto;
 padding: 0; text-align: center;
 }
@@ -323,7 +323,7 @@ border: none; float: left; margin: 0; padding: 0; width: auto;
 DIV.col-fill {
 font-family: Verdana, Arial, Helvetica, sans-serif;
 font-size: 10px; font-weight: bold; text-decoration: none;
-background-color: #B4B0AA; color: #000099;
+background: #B4B0AA; color: #000099;
 margin: 0; padding: 0; border: none; width: 0;
 }
 
@@ -332,7 +332,7 @@ border: none; float: right; margin: 0; padding: 0; width: auto;
 }
 
 DIV.contentarea {
-background-color: #FFFFFF;
+background: #FFFFFF;
 border: solid black 1px;
 margin-top: 10px;
 padding: 10px;
