--- a/specialized/opentravelsystem/webapp/hotelfrontend/images/ecommain.css
+++ b/specialized/opentravelsystem/webapp/hotelfrontend/images/ecommain.css
@@ -3,7 +3,7 @@
 
 /* ===== Basic Element Styles ===== */
 BODY {
-background-color: #FFFFFF;
+background: #FFFFFF;
 margin-top: 10px;
 margin-right: 10px;
 margin-bottom: 10px;
@@ -18,6 +18,12 @@ UL {
 margin-top: 0; 
 margin-bottom: 0;
 }
+
+.endcolumns {
+clear: both;
+height: 0px;
+visibility: hidden;
+}  
 
 
 /* ===== Header Styles ===== */
@@ -112,18 +118,13 @@ color: #666666;
 
 /* ===== Header-Bar Styles ===== */
 #ecom-header-bar {
-position: relative;
 background: #B4B0AA;
 text-align: center;
 overflow: visible;
 height: 14px;
-voice-family: "\"}\"";
-voice-family: inherit;
-height: 14px;
 }
 
 #ecom-header-bar ul {
-position: absolute;
 display: block;
 overflow: visible;
 list-style: none;
@@ -131,19 +132,6 @@ background: transparent;
 vertical-align: middle;
 margin: 0px;
 padding: 0px;
-}
-#ecom-header-bar ul#left-links {
-width: auto;
-top: 0;
-left: 0;
-}
-#ecom-header-bar ul#right-links {
-top: 0;
-right: 0;
-width: 50%;
-overflow: visible;
-
-/* border:1px solid #009; */
 }
 
 #ecom-header-bar ul li { 
@@ -172,7 +160,6 @@ text-decoration: underline;
 }
 
 
-
 /* ===== Layout/Formatting Styles ===== */
 /* NOTE: using a combination of a float left/right for the side bars AND 
   wide margins for the center to get 2 desired effects: 1. be able to end
@@ -186,14 +173,14 @@ text-decoration: underline;
 /* ecom-mainarea wraps what is below the header including the divs for left, main, right columns as applicable */
 #ecom-mainarea {
 position: relative;
-background-color: #FFFFFF;
-width: auto;
+background: #FFFFFF;
+width: 100%;
 }
 
 #ecom-mainarea .left {
 /* alt: position: absolute; left: 0px; top: 0px; */
 float: left;
-width: 190px;
+width: 200px;  /* changed!!!!! */
 background: #ffffff;
 /* border:1px solid #000; */
 }
@@ -232,26 +219,21 @@ voice-family: inherit;
 margin-right: 211px;
 }
 
-DIV.ecom-endcolumns {
-  clear: both;
-  font-size: 4pt;
-}  
-
 /* ====== eCommerce "Screenlet" Styles ====== */
-DIV.ecom-screenlet {
-background-color: #FFFFFF;
+#ecom-mainarea .screenlet {
+background: #FFFFFF;
 border: 1px solid #999999;
 margin-bottom: 10px;
 }
-DIV.ecom-screenlet-header {
-background-color: #000099;
+#ecom-mainarea .screenlet-header {
+background: #CC9933;  /* changed!!!!! */
 padding-top: 1px;
 padding-bottom: 1px;
 padding-right: 4px;
 padding-left: 4px;
 }
-DIV.ecom-screenlet-body {
-background-color: #FFFFFF;
+#ecom-mainarea .screenlet-body {
+background: #FFFFFF;
 padding: 4px;
 }
 
@@ -283,24 +265,24 @@ color: red;
 }
 
 /* Form layout styles to simulate a table-style layout */
-div.ecom-form-row {
+#ecom-mainarea .form-row {
 clear: both;
 padding-top: 2px;
 }
-div.ecom-form-label {
+#ecom-mainarea .form-label {
 float: left;
 width: 180px;
 text-align: right;
 padding-top: 5px;
 }
-div.ecom-form-field {
+#ecom-mainarea .form-field {
 float: left;
 margin-left: 10px;
 text-align: left;
 } 
 
 /* ===== Text/Label Styles ===== */
-.tabletext, div.ecom-form-label, div.ecom-form-field {
+.tabletext, div.form-label, div.form-field {
 font-size: 10px;
 text-decoration: none;
 font-family: Verdana, Arial, Helvetica, sans-serif;
@@ -365,7 +347,7 @@ DIV.graybox {
 font-family: Verdana, Arial, Helvetica, sans-serif;
 font-size: 10px;
 font-weight: bold;
-background-color: #CCCCCC;
+background: #CCCCCC;
 border: 1px solid #000000;
 text-align: center;
 margin: 2px auto;
@@ -375,7 +357,7 @@ padding: 4px;
 
 
 .boxoutside {
-background-color: #FFFFFF;
+background: #FFFFFF;
 padding: 0px;
 border-color: #999999;
 border-style: solid;
@@ -383,7 +365,7 @@ border-width: 1px 1px 1px 1px;
 }
 
 .boxtop {
-background-color: #000099;
+background: #000099;
 padding-top: 1px;
 padding-bottom: 1px;
 padding-right: 4px;
@@ -394,7 +376,7 @@ border-width: 0px 0px 0px 0px;
 }
 
 .boxbottom {
-background-color: #FFFFFF;
+background: #FFFFFF;
 padding: 4px;
 border-color: #999999;
 border-style: solid;
@@ -403,7 +385,7 @@ border-width: 0px 0px 0px 0px;
 
 .button {
 border-style: outset; border-color: #9999CC; border-width: 2px;
-background-color: #dddddd;
+background: #dddddd;
 padding-right: 5px; padding-left: 5px;
 }
 
@@ -653,7 +635,7 @@ HR.sepbar {
 font-size: xx-small;
 width: 100%;
 height: 1px;
-background-color: #999999;
+background: #999999;
 border-width: 0px;
 }
 
@@ -675,7 +657,7 @@ color: #000099;
 
 .ontab {
 font-size: 8pt;
-background-color: black;
+background: black;
 padding: 2px;
 border-style: inset;
 border-width: 3px;
@@ -692,7 +674,7 @@ padding: 2px;
 
 .offtab {
 font-size: 10px;
-background-color: #CCCCCC;
+background: #CCCCCC;
 padding: 2px;
 border-style: outset;
 border-width: 3px;
@@ -717,7 +699,7 @@ font-family: Verdana, Arial, Helvetica, sans-serif;
 font-weight: bold;
 color: #FFFFFF;
 width: 100%;
-background-color: black;
+background: black;
 padding: 2px;
 }
 
@@ -731,38 +713,38 @@ border-left-width: thin
 }
 
 .editInputBox {
-background-color: #FFFFFF;
+background: #FFFFFF;
 font-size: 8pt;
 font-family: Verdana, Arial, Helvetica, sans-serif;
 }
 
 .inputBox {
 font-family: Verdana, Arial, Helvetica, sans-serif;
-background-color: #FFFFFF;
+background: #FFFFFF;
 font-size: 8pt;
 }
 
 .selectBox {
 font-family: Verdana, Arial, Helvetica, sans-serif;
-background-color: #FFFFFF;
+background: #FFFFFF;
 font-size: 8pt;
 }
 
 .textAreaBox {
 font-family: Verdana, Arial, Helvetica, sans-serif;
-background-color: #FFFFFF;
+background: #FFFFFF;
 font-size: 8pt;
 }
 
 .radioButton {
 font-family: Verdana, Arial, Helvetica, sans-serif;
-background-color: #FFFFFF;
+background: #FFFFFF;
 font-size: 8pt;
 }
 
 .checkBox {
 font-family: Verdana, Arial, Helvetica, sans-serif;
-background-color: #FFFFFF;
+background: #FFFFFF;
 font-size: 8pt;
 }
 
@@ -772,7 +754,7 @@ font-size: 8pt;
 font-weight: bold;
 text-decoration: none;
 color: #000099;
-background-color: white;
+background: white;
 border: #999999 solid 1px;
 }
 
@@ -782,7 +764,7 @@ font-size: 10pt;
 font-weight: bold;
 text-decoration: none;
 color: #000099;
-background-color: white;
+background: white;
 border: #999999 solid 1px;
 }
 
