Changed width for column-container from auto to 100% to fix problem with IE, thanks to Matt Penner for this fix
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4894 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/framework/images/webapp/images/tabstyles.css
+++ b/framework/images/webapp/images/tabstyles.css
@@ -165,7 +165,7 @@ padding: 4px;
 position: relative;
 background-color: #FFFFFF;
 margin: auto;
-width: auto;
+width: 100%;
 }
 
 #column-container .left {
